--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "mongoose": "^6.7.1"
+    "express-session": "^1.17.3",
+    "mongoose": "^6.7.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
